--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop
 root: .
-venue: HASTAC Conference
+venue: HASTAC Conference (Software Carpentry)
 address: Kellogg Center, Michigan State University
 country: United-States
 language: en
