--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: workshop
 root: .
 venue: HASTAC Conference (Software Carpentry)
-address: Kellogg Center, Michigan State University
+address: 255 Old Horticulture, Michigan State University
 country: United-States
 language: en
-latlng: 42.730696,-84.49288
+latlng: 42.73226,-84.478175
 humandate: May 30-31, 2015
 humantime: 09:00-16:00
 startdate: 2015-05-30
