--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 09:00-16:00
 startdate: 2015-05-30
 enddate: 2015-05-31
 instructor: ["Fiona Tweedie", "Greg Wilson"]
-helper: []
+helper: ["Devin Higgins"]
 contact: gvwilson@software-carpentry.org
 etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
 eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
