tidying up formatting

--- a/index.html
+++ b/index.html
@@ -530,19 +530,20 @@ eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 12
     <p>Natural Language Toolkit is a library of Python that can be used to analyse features of large bodies of text.
     you will need to install NLTK for use in this workshop. If you want to learn more about NLTK, the O'Reilly book 
     for Python 2 is a good resource, available <a href="http://www.nltk.org/book_1ed/">here</a>.</p>
-    <p>To install NLTK
-    <li>Open a terminal window and type</li>
-    <code>
-    pip install NLTK
-    </code>
-    <li>Then in a python shell run the following commands</li>
-    <code>
-    import nltk
-    nltk.download('punkt')
-    nltk.download('stopwords')
-    nltk.download('book')
-    </code>
-    </p>
+    <p>To install NLTK:</p>
+    <ol>
+      <li>
+	Open a terminal window and type
+	<pre>pip install NLTK</pre>
+      </li>
+      <li>
+	Then in a python shell run the following commands
+	<pre>import nltk
+nltk.download('punkt')
+nltk.download('stopwords')
+nltk.download('book')</pre>
+      </li>
+    </ol>
   </div>
 </div> <!-- End of 'Python' section. -->
 
